adding rest entrypoint to return RH fingerprint
