# rest/models/fingerprint.go
@@ -1,0 +1,66 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Fingerprint fingerprint
+// swagger:model fingerprint
+type Fingerprint struct {
+
+	// hash
+	// Required: true
+	// Read Only: true
+	Hash string `json:"hash"`
+}
+
+// Validate validates this fingerprint
+func (m *Fingerprint) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateHash(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Fingerprint) validateHash(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("hash", "body", string(m.Hash)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Fingerprint) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Fingerprint) UnmarshalBinary(b []byte) error {
+	var res Fingerprint
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
